Remove position: sticky and fix minor layout bug

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,4 +1,4 @@
-@import './breakpoints';
+@import './variables';
 
 #app {
   display: flex;
@@ -11,6 +11,10 @@
 
 #content {
   width: 100%;
+
+  @media screen and (min-width: $break-lg) {
+    padding-left: $sidebarWidth;
+  }
 }
 
 .main-container {
